--- a/server/views/pages/login.ejs
+++ b/server/views/pages/login.ejs
@@ -12,7 +12,11 @@
   <main>
     <div class="row" id="header">
       <h1>Nettok</h1>
+    </div>
+    <div>
+      <div>
 
+      </div>
     </div>
   </main>
 
